fix z-index

--- a/src/components/FilterPopup/FilterPopup.module.scss
+++ b/src/components/FilterPopup/FilterPopup.module.scss
@@ -7,6 +7,7 @@
   border-radius: 5px;
   font-size: 14px;
   cursor: pointer;
+  z-index: 10;
 
   & .title {
     display: flex;
